syntax = "proto3";

package com.example.worker;
option java_multiple_files = true;

enum Position {
  SELLER = 0;
  MANAGER =1;
}

message WorkerRequest{
  string name = 1;
  string surname = 2;
  Position position = 3;
}

message WorkerResponse{
  string id = 1;
  string name = 2;
  string surname = 3;
  Position position = 4;
}

message AllWorkersRequest{
}

message AllWorkersResponse{
  repeated WorkerResponse workers = 1;
}

message WorkerByIdRequest{
  string id = 1;
}

message DeleteWorkerResponse {
  string response = 1;
}

service WorkerService{
  rpc add(WorkerRequest) returns (WorkerResponse);
  rpc all(AllWorkersRequest) returns (AllWorkersResponse);
  rpc byId (WorkerByIdRequest) returns (WorkerResponse);
  rpc delete (WorkerByIdRequest) returns (DeleteWorkerResponse);
}